# BN_SMC

./: .gitignore  CMakeLists.txt  README.md  SMC_BN.cbp  SMC_BN.layout  experiments.R  main.cpp  main.h  makefile  makefile-intel
include/: bn.h  constraint.h  cpd.h  data.h  edge.h  max.h  node.h  smc.h  statistics.h  utils.h
src/: bn.cpp  constraint.cpp  cpd.cpp  data.cpp  edge.cpp  max.cpp  node.cpp  smc.cpp  statistics.cpp  utils.cpp
