CMAKE_MINIMUM_REQUIRED(VERSION 3.8)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

PROJECT(BN_SMC)

FIND_PACKAGE(Boost REQUIRED)
FIND_PACKAGE(OpenMP REQUIRED)
include_directories(${Boost_INCLUDE_DIRS})

FILE(GLOB CPP_FILES src/*.cpp) 
FILE(GLOB H_FILES include/*.h) 
SET(SOURCE_FILE ${CPP_FILES} ${H_FILES})
INCLUDE_DIRECTORIES("/home/manbish/projects/BN_SMC/include")

ADD_EXECUTABLE(bn_smc main.cpp main.h ${SOURCE_FILE})
TARGET_LINK_LIBRARIES(bn_smc ${OpenMP_CXX_LIBRARIES})